--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div>
                     <input type="button" value="00" onclick="document.getElementById('display').value += '00' ">
                     <input type="button" value="0" onclick="document.getElementById('display').value += '0' ">
-                    <input type="button" value="=" class="equal operator" onclick="document.getElementById('display').value = 'Maaf Ya :('">
+                    <input type="button" value="=" class="equal operator" onclick="document.getElementById('display').value = 'I Love U'">
                 </div>
             </form>
         </div>
